# velocity_banking

./: .dockerignore  .gitignore  ANALYTICS_MONITORING_GUIDE.md  DEVOPS_SETUP_COMPLETE.md  DOCKER_IMAGE_BUILD_SUMMARY.md  E2E_TESTS.md  FEATURE_TEST_COVERAGE.md  FLASK_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  LOGIN_FEATURE_SUMMARY.md  MAKEFILE_DOCUMENTATION.md  Makefile  OPTIMIZATION_GUIDE.md  PROJECT_STATUS.md  PYTHON_MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TASK_AUDIT_REPORT.md  TESTING_IMPLEMENTATION_PLAN.md  diagnostic-report.json  docker-compose.yml  monitor-dashboard.py  package-lock.json  package.json  playwright.config.ts  test-dashboard-access.js  test-e2e.sh  test-velocity-app.js  velocity-banking-diagnostic-report.md
backend_python/: .env.example  .gitignore  Dockerfile  Makefile  README.md  TESTING_SUMMARY.md  pyproject.toml  requirements.txt  test_optimization_standalone.py
backend_python/src/: __init__.py  app.py  config.py  main.py
backend_python/src/controllers/: calculation_controller_flask.py  heloc_controller_flask.py  investment_controller_flask.py  mortgage_controller.py  mortgage_controller_flask.py  optimization_controller.py  payment_controller_flask.py  user_controller_flask.py
backend_python/src/middleware/: error_handler.py
backend_python/src/models/: __init__.py  base.py  base_flask.py  heloc.py  heloc_flask.py  mortgage.py  mortgage_flask.py  payment.py  payment_flask.py  payment_strategy.py  schemas.py  user.py  user_flask.py
backend_python/src/services/: __init__.py  calculation_service.py  mortgage_service.py  (+1 more)
(+89 files in other folders)
